--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 
   <footer>
     Volto em 1º de janeiro. Até lá, 1 ano off.
-    obs: Vou ficar só 1 dia on
+    \nobs: Vou ficar só 1 dia on\n
+    aviso: também não tenho nenhuma conta em qualquer outro app a não ser discord
   </footer>
 
   <script>
