--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
     × off
   </a>
 
-  <footer>
-    Volto em 1º de janeiro. Até lá, 1 ano off.
-    \nobs: Vou ficar só 1 dia on\n
-    aviso: também não tenho nenhuma conta em qualquer outro app a não ser discord
-  </footer>
+
+ <footer>
+  Volto em 1º de janeiro. Até lá, 1 ano off.<br>
+  <strong>Obs:</strong> Vou ficar só 1 dia on.<br>
+  <strong>Aviso:</strong> Também não tenho nenhuma conta em qualquer outro app, apenas no Discord.
+</footer>
+ 
 
   <script>
     function atualizarContador() {
