--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
   </a>
 
 
- <footer>
+ <footer style="margin-top: 30px; font-size: 0.9rem; color: #aaaaaa; line-height: 1.6;">
   Volto em 1º de janeiro. Até lá, 1 ano off.<br>
   <strong>Obs:</strong> Vou ficar só 1 dia on.<br>
   <strong>Aviso:</strong> Também não tenho nenhuma conta em qualquer outro app, apenas no Discord.
 </footer>
+
  
 
   <script>
